force-app/main/default/objects/Apttus__APTS_Template__c/Apttus__APTS_Template__c.object-meta.xml
<CustomObject>
    <description>Contract language templates available in the system. These templates specify guidance, language, local setitngs, and include Word attachment templates representing the bulk of actual contracts that can be used when creating a first draft . Templates can include standard and non-standard language.</description>
    <label>Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>