force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__ActivateVersion__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ActivateVersion__c</fullName>
    <formula>IF (True, HYPERLINK(&quot;/apex/Apttus__TemplateFinder?source=salesforce&amp;callerMode=activate&amp;templateId=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_ActivateVersion&quot;, &quot;Activate&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activate Version</label>
    <type>Text</type>
</CustomField>