force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__ActiveVersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ActiveVersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to active version of the template</description>
    <inlineHelpText>Lookup to active version of the template</inlineHelpText>
    <label>Active Version</label>
    <referenceTo>Apttus__TemplateVersion__c</referenceTo>
    <relationshipLabel>Templates (Template Version)</relationshipLabel>
    <relationshipName>Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>