force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Agreement_Types__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Agreement_Types__c</fullName>
    <description>Note: If you add a new agreement record type, the type must also be manually added to this set of picklist values to keep record types in sync between agreements and templates.</description>
    <label>Agreement Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>