force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__BusinessObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus__BusinessObject__c</fullName>
    <description>The API name of the business object associated with the template</description>
    <inlineHelpText>The API name of the business object associated with the template</inlineHelpText>
    <label>Business Object</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Apttus__APTS_Agreement__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Proposal__Proposal__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>