force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Category__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Category__c</fullName>
    <description>Specifies the class of template or clauses into a high level category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>