force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__CheckoutById__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CheckoutById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who has checked out the template</description>
    <inlineHelpText>User who has checked out the template</inlineHelpText>
    <label>Checkout By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CheckedoutTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>