force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__CheckoutVersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CheckoutVersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Version id that the user checked out for edit</description>
    <inlineHelpText>Version id that the user checked out for edit</inlineHelpText>
    <label>Checkout Version</label>
    <referenceTo>Apttus__TemplateVersion__c</referenceTo>
    <relationshipLabel>Templates (Checked Out Version)</relationshipLabel>
    <relationshipName>CheckedoutTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>