force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__ClauseType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseType__c</fullName>
    <description>Type of clause</description>
    <inlineHelpText>Type of clause</inlineHelpText>
    <label>Clause Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternate Clause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>