force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__ClonedFromId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClonedFromId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the clause or template this was cloned from</description>
    <inlineHelpText>ID of the clause or template this was cloned from</inlineHelpText>
    <label>Cloned From</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Clones</relationshipLabel>
    <relationshipName>Clones</relationshipName>
    <type>Lookup</type>
</CustomField>