force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__ClonedFromReferenceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClonedFromReferenceId__c</fullName>
    <description>Reference identifier of the clause or template this was cloned from</description>
    <inlineHelpText>Reference identifier of the clause or template this was cloned from</inlineHelpText>
    <label>Cloned From Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>