force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>