force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__EnableAgreementClauseTracking__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EnableAgreementClauseTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables tracking of agreement clause changes</description>
    <inlineHelpText>Enables tracking of agreement clause changes</inlineHelpText>
    <label>Enable Agreement Clause Tracking</label>
    <type>Checkbox</type>
</CustomField>