force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__ExcludedMergeChildObjects__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ExcludedMergeChildObjects__c</fullName>
    <description>Specifies the child objects to exclude for a given parent from the merge process. Only applicable when a child object has multiple parents.</description>
    <inlineHelpText>Specifies the child objects to exclude for a given parent from the merge process. Only applicable when a child object has multiple parents.</inlineHelpText>
    <label>Excluded Merge Child Objects</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>