force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__FrameworkFormat__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FrameworkFormat__c</fullName>
    <description>Template framework format</description>
    <inlineHelpText>Template framework format</inlineHelpText>
    <label>Framework Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre FX2</fullName>
            </value>
            <value>
                <fullName>FX2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>