force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Guidance__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Guidance__c</fullName>
    <label>Guidance</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>