force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__IsTransient__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IsTransient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the template is a transient record. Usually when a template is created without checking in the document</description>
    <inlineHelpText>Indicates if the template is a transient record. Usually when a template is created without checking in the document</inlineHelpText>
    <label>Is Transient</label>
    <type>Checkbox</type>
</CustomField>