force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Keywords__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Keywords__c</fullName>
    <description>Keywords on which the contract template can be searched and included in search layouts</description>
    <label>Keywords</label>
    <type>TextArea</type>
</CustomField>