force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Mergefields2__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Mergefields2__c</fullName>
    <description>Merge fields used both in the template and clauses nested in the template. Automatically maintained by the Apttus Author.</description>
    <inlineHelpText>Merge fields used both in the template and clauses nested in the template. Automatically maintained by the Apttus Author.</inlineHelpText>
    <label>Mergefields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>