force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Mergefields__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Mergefields__c</fullName>
    <description>Merge fields used in the template. Automatically maintained by the Apttus Author or manually entered using the following form: object1 (field1,field2,...fieldn); object2 (field1,field2,...fieldn); etc</description>
    <inlineHelpText>Merge fields used in the template.</inlineHelpText>
    <label>Mergefields (Internal)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>