force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__NumberOfClauses__c.field-meta.xml
<CustomField>
    <fullName>Apttus__NumberOfClauses__c</fullName>
    <description>Indicates the number of clauses associated with the template</description>
    <inlineHelpText>Indicates the number of clauses associated with the template</inlineHelpText>
    <label>Number Of Clauses</label>
    <summaryForeignKey>Apttus__TemplateClauseReference__c.Apttus__TemplateId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>