force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__PubDocId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PubDocId__c</fullName>
    <description>The published template document</description>
    <label>Published Doc ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>