force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Publish__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Publish__c</fullName>
    <description>&quot;Publish&quot; custom button</description>
    <formula>IF (True, HYPERLINK(&quot;/apex/Apttus__TemplatePublish?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Publish&quot;, &quot;Publish&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publish</label>
    <type>Text</type>
</CustomField>