force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__PublishedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PublishedDate__c</fullName>
    <description>Date when the template was published</description>
    <inlineHelpText>Date when the template was published</inlineHelpText>
    <label>Published Date</label>
    <type>DateTime</type>
</CustomField>