force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__PublishStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PublishStatus__c</fullName>
    <description>The template publish status</description>
    <inlineHelpText>The template publish status</inlineHelpText>
    <label>Publish Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>