force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReferenceId__c</fullName>
    <description>A unique external reference identifier</description>
    <externalId>true</externalId>
    <inlineHelpText>A unique external reference identifier</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>