force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus__Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>