force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__TermExceptionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TermExceptionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the term exception associated with the clause or section</description>
    <inlineHelpText>ID of the term exception associated with the clause or section</inlineHelpText>
    <label>Term Exception</label>
    <referenceTo>Apttus__Term_Exception__c</referenceTo>
    <relationshipLabel>Sections/Clauses</relationshipLabel>
    <relationshipName>Templates</relationshipName>
    <type>Lookup</type>
</CustomField>