force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Type__c</fullName>
    <description>Specifies the contract template type which can be either a template or clause type.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
                <default>true</default>
                <label>Agreement</label>
            </value>
            <value>
                <fullName>Clause</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Supporting Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>