force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus__Unpublish__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Unpublish__c</fullName>
    <description>&quot;Unpublish&quot; custom button</description>
    <formula>IF ( LEN( Apttus__PubDocId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus__TemplateUnpublish?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Unpublish&quot;, &quot;Unpublish&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpublish</label>
    <type>Text</type>
</CustomField>