force-app/main/default/objects/Apttus__APTS_Template__c/fields/Apttus_Proposal__RFP_Response_Content__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__RFP_Response_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFP Response Content</label>
    <type>Checkbox</type>
</CustomField>