force-app/main/default/objects/Apttus__APTS_Template__c/listViews/Apttus__Agreements.listView-meta.xml
<ListView>
    <fullName>Apttus__Agreements</fullName>
    <columns>NAME</columns>
    <columns>Apttus__IsActive__c</columns>
    <columns>Apttus__Category__c</columns>
    <columns>Apttus__Subcategory__c</columns>
    <columns>Apttus__Agreement_Types__c</columns>
    <columns>Apttus__Guidance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus__Type__c</field>
        <operation>equals</operation>
        <value>Agreement</value>
    </filters>
    <label>Agreements</label>
</ListView>