force-app/main/default/objects/Apttus__APTS_Template__c/listViews/Apttus__All.listView-meta.xml
<ListView>
    <fullName>Apttus__All</fullName>
    <columns>Apttus__Type__c</columns>
    <columns>NAME</columns>
    <columns>Apttus__IsActive__c</columns>
    <columns>Apttus__Category__c</columns>
    <columns>Apttus__Subcategory__c</columns>
    <columns>Apttus__Agreement_Types__c</columns>
    <columns>Apttus__Guidance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>