force-app/main/default/objects/Apttus__APTS_Template__c/listViews/Apttus__Proposals.listView-meta.xml
<ListView>
    <fullName>Apttus__Proposals</fullName>
    <columns>NAME</columns>
    <columns>Apttus__IsActive__c</columns>
    <columns>Apttus__Category__c</columns>
    <columns>Apttus__Subcategory__c</columns>
    <columns>Apttus__Agreement_Types__c</columns>
    <columns>Apttus__Guidance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus__Type__c</field>
        <operation>equals</operation>
        <value>Proposal</value>
    </filters>
    <label>Proposals</label>
</ListView>